# plaid2firefly

./: .gitignore  const.py  exceptions.py  plaid.py  plaid2firefly.py  plaid_client.py  pyproject.toml
.devcontainer/: devcontainer.json
templates/: index.html
